<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">商标查询</string>
    <string name="action_settings">Settings</string>
    <string name="list_text_index">序号</string>
    <string name="list_text_id">注册号，申请号</string>
    <string name="list_text_zhuce">注册号</string>
	<string name="list_text_class">类别</string>
	<string name="list_text_brand">商标名称</string>
	<string name="login_bt_login">登录</string>
	<string name="login_edit_password">密码</string>
	<string name="login_edit_account">请输入手机号</string>
	<string name="login_bt_register">新用户</string>
	<string name="register_bt_register">注册</string>
	<string name="register_edit_repassword">确认密码</string>
	<string name="register_yanzheng">请输入验证码</string>
	
	<string name="search_class_bt_name">注册号</string>
	<string name="search_class_bt_class">申请号</string>
	
	<string name="search_comple_edit_classify">分类号</string>
	<string name="search_comple_edit_register">注册号，申请号</string>
	<string name="search_comple_edit_name">商标名称</string>
	<string name="search_comple_edit_people">申请人</string>
	<string name="search_comple_bt_search">搜索</string>
	<string-array name="search_comple_spinner">
	    <item >精准</item>
	    <item >模糊</item>
	</string-array>
	<string name="search_same_edit_search">查询方式</string>
	<string name="search_same_edit_content">查询内容</string>
	<string name="main_list_item0">商标状态查询</string>
	<string name="main_list_item1">近似查询</string>
	<string name="main_list_item2">综合查询</string>
	<string name="vipchongzhi">您的会员于《</string>
	<string name="vipchongzhi1">》到期，如果需要继续享用vip超级用户特权，请您及时充值，谢谢配合，祝您生活愉快，事业顺利</string>
	<string name="searchar_hint">请输入使用商品或服务项目</string>
</resources>
