<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="#efefef"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/list_text_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/list_text_index"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_text_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/list_text_class"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/list_text_id"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="@+id/list_center"
            android:text="@string/list_text_brand"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
