<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <com.hutu.longchang.widget.HeadTitleView 
        android:id="@+id/trade_manager_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
    </com.hutu.longchang.widget.HeadTitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/listitem_text_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_text_index"
            android:textSize="20sp"
            android:textColor="#6D468B" />
        <TextView
            android:id="@+id/listitem_text_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_text_class"
            android:textSize="20sp" 
            android:textColor="#6D468B"/>

        <TextView
            android:id="@+id/listitem_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_text_id"
            android:textSize="20sp" 
            android:textColor="#6D468B"/>
        

        <TextView
            android:id="@+id/listitem_text_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="@+id/list_center"
            android:text="@string/list_text_brand"
            android:textSize="20sp" 
            android:textColor="#6D468B"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
