<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.hutu.longchang.widget.HeadTitleView
        android:id="@+id/trade_manager_head" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
    </com.hutu.longchang.widget.HeadTitleView>
    <EditText
        android:id="@+id/register_edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/group"
        android:layout_marginRight="@dimen/group"
        android:layout_marginTop="@dimen/group"
        android:hint="@string/login_edit_account"
        android:background="@drawable/login_srk"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/group"
        android:layout_marginRight="@dimen/group"
        android:layout_marginTop="@dimen/group"
        android:hint="@string/login_edit_password"
        android:background="@drawable/login_srk"
        android:inputType="textPassword"
        android:ems="10" />

    <EditText
        android:id="@+id/register_edit_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/group"
        android:layout_marginRight="@dimen/group"
        android:layout_marginTop="@dimen/group"
        android:hint="@string/register_edit_repassword"
        android:background="@drawable/login_srk"
        android:inputType="textPassword"
        android:ems="10" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/group"
        android:layout_marginRight="@dimen/group"
        android:layout_marginTop="@dimen/group"
        android:orientation="horizontal">
        <EditText 
        android:id="@+id/register_yanzheng_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_yanzheng"
        android:background="@drawable/login_srk"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_weight="1"/>
        <Button
            android:id="@+id/register_yanzheng_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="获取验证码"
            android:background="#C9D7F2"
            android:textColor="#ffffff"/>
    </LinearLayout>
    

    <Button
        android:id="@+id/register_bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/group"
        android:layout_marginRight="@dimen/group"
        android:layout_marginTop="@dimen/group"
        android:background="@color/bt_bg"
        android:hint="string/register_edit_repassword"
        android:text="@string/register_bt_register"
        android:textColor="@color/bt_font" />

</LinearLayout>
